[Password Manager] Remove DCHECKs for field name as a field can have empty name

Votes are not uploaded for fields with empty names. It is checked in |LabelFields|. So, adding empty keys to |field_types| is ok.

Bug: 850013
Change-Id: I46dd0b665a612d5c23e116d7e2664e5c12d7f804
Reviewed-on: https://chromium-review.googlesource.com/1092855
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566011}
Former-commit-id: 457bd39091c7293908c7876f3fbefd7dc07701c3